fix z-index issue for datepicker in sidebar

--- a/app/stylesheets/forms/_datepicker.scss
+++ b/app/stylesheets/forms/_datepicker.scss
@@ -30,3 +30,7 @@
     }
   }
 }
+
+.datepicker.dropdown-menu {
+  z-index: 9;
+}
